# kbdmod-gui

./: .gitignore  CMakeLists.txt  Cargo.toml
keycodegrab/: clear.sh  keycodegrab.cpp  keycodegrab.sh  udevmon.sh  udevmon.yml
shell/: GetKeyboardName.sh  pullKeyboard.sh
src/: gui.cpp  gui.h  gui.rs  iced_main.rs  io.cpp  io.h  keyboard.cpp  keyboard.h  keyboard.rs  main.cpp  main.rs  render.rs  save.rs  storage.rs  tests.rs  window.cpp
